# netencode

./: .NOTES  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  Netencode.hs  README.md  cabal.project  claude-instructions.md  default.nix  flake.nix  hie.yaml  netencode-mustache.rs  netencode.cabal  netencode.rs  pretty.rs  rust-crates.nix  shell.nix
.claude/: CLAUDE-build.md  CLAUDE-debug.md  CLAUDE-docs.md  CLAUDE-git.md  CLAUDE-test.md
Netencode/: Parse.hs
arglib/: arglib-netencode.cabal  netencode.nix
docs/: 2025-01-04_next-steps-analysis.md  2025-06-25-integer-simplification.md  2025-06-25-onboarding-usability-improvements.md  2025-06-26_022033_claude-compact.md  2025-06-26_164500_claude-documentation-implementation.md  2025-06-26_175500_claude-flake-implementation.md  2025-07-02_143000_claude-test-infrastructure.md  2025-07-02_api-standardization.md  2025-07-02_cross-language-generator-tests.md  2025-07-03_manpage-test-suite-implementation.md
exec-helpers/: default.nix
lib-haskell/: Netencode.hs  netencode.cabal
lib-nix/: gen.nix  test-gen.nix
lib-python/: netencode.py  test_generator_spec.py
lib-rust/: Cargo.toml  netencode.rs  pretty.rs
lib-rust/examples/: advanced.rs  basic.rs  playground.rs
lib-rust/src/: netencode.rs
lib-rust/tests/: simple_generator_test.rs
lib-rust/workspace-template/: Cargo.toml  README.md
man/: env-splice-record.1.scd  env-to-netencode.1.scd  json-to-netencode.1.scd  netencode-filter.1.scd  netencode-mustache.1.scd  netencode-plain.1.scd  netencode-pretty.1.scd  netencode-record-get.1.scd  netencode-to-env.1.scd  (+3 more)
(+17 files in other folders)
